app/styles/media-queries.scss
/**************************************************************************************************
Heading
**************************************************************************************************/




@media(max-width: 2560px){

  .page-section {
    height: 750px;
  }
  #title {
    height: 700px;
  }
  .title-name {
    margin-top: 320px;
  }

}

@media(max-width: 1440px){

  .page-section {
    height: 635px;
  }
  #title {
    height: 700px;
  }
  .title-name {
    margin-top: 290px;
  }
}

@media(max-width: 768px){

  .page-section {
    height: 700px;
  }
  #title {
    height: 700px;
  }
  .title-name {
    margin-top: 0px;
    padding-top: 300px;
  }
}

@media(max-width: 425px){

  .page-section {
    height: 700px;
  }
  #title {
    font-size: 10px;
  }

  .brand {
    display: none;
  }
}




/**************************************************************************************************
About
**************************************************************************************************/




@media(max-width: 2560px){

  #about {
    height: 700px;
  }
  .about-title {
    margin-top: 200px;
  }
  .about-summary {
    margin-left: 10%;
    margin-right: 10%;
  }
}

@media(max-width: 1440px){

  #about {
    height: 635px;
  }
  .about-title {
    margin-top: 160px;
  }
  .about-summary {
    margin-left: 10%;
    margin-right: 10%;
  }
}

@media(max-width: 768px){

  #about {
    height: 635px;
  }
  .about-title {
    margin-top: 0px;
    padding-top: 80px;
  }
  .about-summary {
    margin-left: 10%;
    margin-right: 10%;
  }
}

@media(max-width: 425px){

  #about {
    height: 500px;
    font-size: 10px;
  }
  .about-summary {
    margin-left: 10%;
    margin-right: 10%;
  }
}




/**************************************************************************************************
Skills
**************************************************************************************************/




@media(max-width: 2560px){

  #skills {
    height: 680px;
  }
  .skills-summary-one {
    margin-left: 10%;
    margin-right: 10%;
  }

  .html-container {
    width: 100px;
    margin-right: 0px;
    display: inline-block;
  }
  .html {
    margin-left: 10px;
    display: inline-block;
  }
  .css-container {
    width: 100px;
    margin-right: 0px;
    display: inline-block;
  }
  .css {
    margin-left: 10px;
    display: inline-block;
  }
  .javascript-container {
    width: 100px;
    margin-right: 0px;
    display: inline-block;
  }
  .javascript {
    margin-left: 10px;
    display: inline-block;
  }
  .jquery-container {
    width: 100px;
    margin-right: 0px;
    display: inline-block;
  }
  .jquery {
    margin-left: 10px;
    height: 100px;
    width: 100px;
  }

  .underscore-container {
    width: 300px;
    margin-right: 0px;
    display: inline-block;
  }
  .underscore {
    margin-left: 10px;
    height: 100px;
    width: 300px;
  }

  .react-container {
    width: 100px;
    margin-right: 0px;
    display: inline-block;
  }
  .react {
    display: inline-block;
  }

  .backbone-container {
    width: 100px;
    margin-right: 0px;
    display: inline-block;
  }
  .backbone {
    margin-left: 10px;
    height: 100px;
    width: 100px;
  }
  .parse-container {
    width: 300px;
    margin-right: 0px;
    display: inline-block;
  }
  .parse {
    margin-left: 10px;
    height: 100px;
    width: 300px;
  }

  .sass-container {
    width: 100px;
    margin-right: 0px;
    display: inline-block;
  }
  .sass {
    margin-left: 10px;
    height: 100px;
    width: 100px;
  }

  .git-container {
    width: 100px;
    margin-right: 0px;
    display: inline-block;
  }
  .git {
    margin-left: 10px;
    height: 100px;
    width: 100px;
  }

  .handlebars-container {
    width: 200px;
    margin-right: 0px;
    display: inline-block;
  }
  .handlebars {
    margin-left: 10px;
    height: 100px;
    width: 200px;
  }

  .photoshop-container {
    width: 100px;
    margin-right: 0px;
    display: inline-block;
  }
  .photoshop {
    margin-left: 10px;
    height: 100px;
    width: 100px;
  }

  .illustrator-container {
    width: 100px;
    margin-right: 0px;
    display: inline-block;
  }
  .illustrator {
    margin-left: 10px;
    height: 100px;
    width: 100px;
  }

  .indesign-container {
    width: 100px;
    margin-right: 0px;
    display: inline-block;
  }
  .indesign {
    margin-left: 10px;
    height: 100px;
    width: 100px;
  }

}
/* ... */

